<resources>
    <string name="app_name">Alexandria</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="book_list_Share_FAB_contentDesc">Share book</string>

    <!-- Book list view -->
    <string name="book_list_empty">No books to display</string>

    <!-- Action menu options -->
    <string name="action_settings">Settings</string>
    <string name="action_add_book">Add Book</string>
    <string name="action_delete_book">Delete Book</string>
    <string name="action_about">About</string>

    <!-- About screen -->
    <string name="about_title">About</string>
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>

    <!-- Add book screen -->
    <string name="add_book_title">Add Book</string>
    <string name="clear_isbn_imageButton_contentDesc">Clear ISBN</string>
    <string name="scan_isbn_imageButton_contentDesc">Scan book</string>
    <string name="isbn_editText_contentDesc">Search book by 13-digit ISBN</string>
    <string name="isbn_editText_hint">13-digit ISBN</string>

    <!-- Book detail screen -->
    <string name="book_detail_ShareButton">Share</string>
    <string name="book_not_selected">You must first select a book from the list</string>
    <string name="book_detail_DeleteButton_contentDesc">Delete book</string>

    <!-- Delete Book dialog -->
    <string name="deletion_message">Are you sure?</string>
    <string name="delete_book_dialog_title">Delete Book</string>
    <string name="delete_confirmation_button_text">Yes, delete it!</string>
    <string name="empty_book_list_db_empty">No book information available. You have not entered any books in your library.</string>
    <string name="empty_book_list_no_network">No book information available. The network is not available to fetch book data.</string>

    <!-- Fetch results returned by the BookService following a fetch command sent by client -->
    <string name="fetch_result_added_to_db">Book added to your library</string>
    <string name="fetch_result_already_in_db">This book was already in your library</string>
    <string name="fetch_result_not_found">Book not found</string>
    <string name="fetch_result_server_error">Server error</string>
    <string name="fetch_result_server_down">Server down</string>
    <string name="fetch_result_internet_down">Internet down</string>
    <string name="fetch_result_unknown">Unknown server error</string>

    <!-- Preferences keys -->
    <string name="pref_fetch_result">fetch_result</string>
    <string name="pref_delete_result">delete_result</string>

</resources>
