<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

      <item android:id="@+id/action_add_book"
            android:title="@string/action_add_book"
            app:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_add"/>

    <item android:id="@+id/action_delete_book"
          android:title="@string/action_delete_book"
          app:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_delete"/>

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          app:showAsAction="never"
          android:icon="@android:drawable/ic_menu_info_details"/>

      <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>